# atri_kotlin

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  build.rs  gradle.properties  gradlew  settings.gradle.kts
src/: lib.rs
src/commonMain/kotlin/: FFI.kt  Loader.kt  Log.kt  Main.kt  Plugin.kt  loader.kt  log.kt  object.kt
src/nativeInterop/cinterop/: atri_manager.def  atri_plugin.def  kotlin_object.def  values.def
