[package]
name = "atri_kotlin"
version = "0.1.0"
edition = "2021"
authors = ["LaoLittle"]
description = "AtriPlugin Kotlin"
keywords = [
    "Atri",
    "Kotlin",
    "oicq"
]
license = "MIT"
homepage = "https://github.com/AtriKawaii/atri_kotlin"
repository = "https://github.com/AtriKawaii/atri_kotlin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
atri_ffi = "0"